--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-hook/media-query": "^1.1.1",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.1",
