--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "cross-env": "node --max_http_header_size=128000 node_modules/vite/bin/vite.js"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
